parse/mscgenparser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root, factory) {
  if (typeof define === "function" && define.amd) {
    define(["../lib/lodash/lodash.custom", "./parserHelpers"], factory);
  } else if (typeof module === "object" && module.exports) {
    module.exports = factory(require("../lib/lodash/lodash.custom"), require("./parserHelpers"));
  }
})(this, function(_, parserHelpers) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { program: peg$parseprogram },
        peg$startRuleFunction  = peg$parseprogram,

        peg$c0 = "{",
        peg$c1 = peg$literalExpectation("{", false),
        peg$c2 = "}",
        peg$c3 = peg$literalExpectation("}", false),
        peg$c4 = function(pre, declarations) {
                declarations.entities = declarations.entities || [];
                parserHelpers.checkForUndeclaredEntities(declarations.entities, declarations.arcs);

                declarations = _.assign ({meta: getMetaInfo()}, declarations);

                if (pre.length > 0) {
                    declarations = _.assign({precomment: pre}, declarations);
                }
                return declarations;
            },
        peg$c5 = "msc",
        peg$c6 = peg$literalExpectation("msc", true),
        peg$c7 = function(options, entities, arcs) {
                  var lDeclarationList = {};
                  if (options) {
                      lDeclarationList.options = options;
                  }
                  if (entities) {
                      lDeclarationList.entities = entities;
                  }
                  if (arcs) {
                      lDeclarationList.arcs = arcs;
                  }
                  return lDeclarationList;
              },
        peg$c8 = ",",
        peg$c9 = peg$literalExpectation(",", false),
        peg$c10 = function(o) {return o},
        peg$c11 = ";",
        peg$c12 = peg$literalExpectation(";", false),
        peg$c13 = function(options) {
                return parserHelpers.optionArray2Object(options[0].concat(options[1]));
            },
        peg$c14 = peg$otherExpectation("option"),
        peg$c15 = "hscale",
        peg$c16 = peg$literalExpectation("hscale", true),
        peg$c17 = "width",
        peg$c18 = peg$literalExpectation("width", true),
        peg$c19 = "arcgradient",
        peg$c20 = peg$literalExpectation("arcgradient", true),
        peg$c21 = "=",
        peg$c22 = peg$literalExpectation("=", false),
        peg$c23 = function(name, value) {
                    return parserHelpers.nameValue2Option(name, value);
                },
        peg$c24 = "wordwraparcs",
        peg$c25 = peg$literalExpectation("wordwraparcs", true),
        peg$c26 = function(name, value) {
                    return parserHelpers.nameValue2Option(name, parserHelpers.flattenBoolean(value));
                },
        peg$c27 = function(e) {return e},
        peg$c28 = function(el) {
              return el[0].concat(el[1]);
            },
        peg$c29 = peg$otherExpectation("entity"),
        peg$c30 = "[",
        peg$c31 = peg$literalExpectation("[", false),
        peg$c32 = "]",
        peg$c33 = peg$literalExpectation("]", false),
        peg$c34 = function(name, a) {return a},
        peg$c35 = function(name, attrList) {
                    return _.assign ({name:name}, attrList);
                },
        peg$c36 = function(name, attrList) {
                  if (parserHelpers.isMscGenKeyword(name)){
                    error("Keywords aren't allowed as entity names (embed them in quotes if you need them)");
                  }
                  return _.assign ({name:name}, attrList);
                },
        peg$c37 = function(a) {return a},
        peg$c38 = function(al) {
               return al[0].concat(al[1]);
            },
        peg$c39 = function(a, al) {return al},
        peg$c40 = function(a, al) {
              return _.assign (a, al);
            },
        peg$c41 = function(kind) {return {kind:kind}},
        peg$c42 = function(from, kind, to) {return {kind: kind, from:from, to:to}},
        peg$c43 = "*",
        peg$c44 = peg$literalExpectation("*", false),
        peg$c45 = function(kind, to) {return {kind:kind, from: "*", to:to}},
        peg$c46 = function(from, kind) {return {kind:kind, from: from, to:"*"}},
        peg$c47 = peg$otherExpectation("empty row"),
        peg$c48 = "|||",
        peg$c49 = peg$literalExpectation("|||", false),
        peg$c50 = "...",
        peg$c51 = peg$literalExpectation("...", false),
        peg$c52 = peg$otherExpectation("---"),
        peg$c53 = "---",
        peg$c54 = peg$literalExpectation("---", false),
        peg$c55 = function(kind) {return kind.toLowerCase()},
        peg$c56 = peg$otherExpectation("bi-directional arrow"),
        peg$c57 = "--",
        peg$c58 = peg$literalExpectation("--", false),
        peg$c59 = "<->",
        peg$c60 = peg$literalExpectation("<->", false),
        peg$c61 = "==",
        peg$c62 = peg$literalExpectation("==", false),
        peg$c63 = "<<=>>",
        peg$c64 = peg$literalExpectation("<<=>>", false),
        peg$c65 = "<=>",
        peg$c66 = peg$literalExpectation("<=>", false),
        peg$c67 = "..",
        peg$c68 = peg$literalExpectation("..", false),
        peg$c69 = "<<>>",
        peg$c70 = peg$literalExpectation("<<>>", false),
        peg$c71 = "::",
        peg$c72 = peg$literalExpectation("::", false),
        peg$c73 = "<:>",
        peg$c74 = peg$literalExpectation("<:>", false),
        peg$c75 = peg$otherExpectation("left to right arrow"),
        peg$c76 = "->",
        peg$c77 = peg$literalExpectation("->", false),
        peg$c78 = "=>>",
        peg$c79 = peg$literalExpectation("=>>", false),
        peg$c80 = "=>",
        peg$c81 = peg$literalExpectation("=>", false),
        peg$c82 = ">>",
        peg$c83 = peg$literalExpectation(">>", false),
        peg$c84 = ":>",
        peg$c85 = peg$literalExpectation(":>", false),
        peg$c86 = "-x",
        peg$c87 = peg$literalExpectation("-x", true),
        peg$c88 = peg$otherExpectation("right to left arrow"),
        peg$c89 = "<-",
        peg$c90 = peg$literalExpectation("<-", false),
        peg$c91 = "<<=",
        peg$c92 = peg$literalExpectation("<<=", false),
        peg$c93 = "<=",
        peg$c94 = peg$literalExpectation("<=", false),
        peg$c95 = "<<",
        peg$c96 = peg$literalExpectation("<<", false),
        peg$c97 = "<:",
        peg$c98 = peg$literalExpectation("<:", false),
        peg$c99 = "x-",
        peg$c100 = peg$literalExpectation("x-", true),
        peg$c101 = peg$otherExpectation("box"),
        peg$c102 = "note",
        peg$c103 = peg$literalExpectation("note", true),
        peg$c104 = "abox",
        peg$c105 = peg$literalExpectation("abox", true),
        peg$c106 = "rbox",
        peg$c107 = peg$literalExpectation("rbox", true),
        peg$c108 = "box",
        peg$c109 = peg$literalExpectation("box", true),
        peg$c110 = function(attributes) {
              return parserHelpers.optionArray2Object(attributes[0].concat(attributes[1]));
            },
        peg$c111 = function(name, value) {
              var lAttribute = {};
              lAttribute[name.toLowerCase().replace("colour", "color")] = value;
              return lAttribute
            },
        peg$c112 = peg$otherExpectation("attribute name"),
        peg$c113 = "label",
        peg$c114 = peg$literalExpectation("label", true),
        peg$c115 = "idurl",
        peg$c116 = peg$literalExpectation("idurl", true),
        peg$c117 = "id",
        peg$c118 = peg$literalExpectation("id", true),
        peg$c119 = "url",
        peg$c120 = peg$literalExpectation("url", true),
        peg$c121 = "linecolor",
        peg$c122 = peg$literalExpectation("linecolor", true),
        peg$c123 = "linecolour",
        peg$c124 = peg$literalExpectation("linecolour", true),
        peg$c125 = "textcolor",
        peg$c126 = peg$literalExpectation("textcolor", true),
        peg$c127 = "textcolour",
        peg$c128 = peg$literalExpectation("textcolour", true),
        peg$c129 = "textbgcolor",
        peg$c130 = peg$literalExpectation("textbgcolor", true),
        peg$c131 = "textbgcolour",
        peg$c132 = peg$literalExpectation("textbgcolour", true),
        peg$c133 = "arclinecolor",
        peg$c134 = peg$literalExpectation("arclinecolor", true),
        peg$c135 = "arclinecolour",
        peg$c136 = peg$literalExpectation("arclinecolour", true),
        peg$c137 = "arctextcolor",
        peg$c138 = peg$literalExpectation("arctextcolor", true),
        peg$c139 = "arctextcolour",
        peg$c140 = peg$literalExpectation("arctextcolour", true),
        peg$c141 = "arctextbgcolor",
        peg$c142 = peg$literalExpectation("arctextbgcolor", true),
        peg$c143 = "arctextbgcolour",
        peg$c144 = peg$literalExpectation("arctextbgcolour", true),
        peg$c145 = "arcskip",
        peg$c146 = peg$literalExpectation("arcskip", true),
        peg$c147 = peg$otherExpectation("double quoted string"),
        peg$c148 = "\"",
        peg$c149 = peg$literalExpectation("\"", false),
        peg$c150 = function(s) {return s.join("")},
        peg$c151 = "\\\"",
        peg$c152 = peg$literalExpectation("\\\"", false),
        peg$c153 = peg$anyExpectation(),
        peg$c154 = function(c) {return c},
        peg$c155 = peg$otherExpectation("identifier"),
        peg$c156 = /^[A-Za-z_0-9]/,
        peg$c157 = peg$classExpectation([["A", "Z"], ["a", "z"], "_", ["0", "9"]], false, false),
        peg$c158 = function(letters) {return letters.join("")},
        peg$c159 = peg$otherExpectation("whitespace"),
        peg$c160 = /^[ \t]/,
        peg$c161 = peg$classExpectation([" ", "\t"], false, false),
        peg$c162 = peg$otherExpectation("lineend"),
        peg$c163 = /^[\r\n]/,
        peg$c164 = peg$classExpectation(["\r", "\n"], false, false),
        peg$c165 = "/*",
        peg$c166 = peg$literalExpectation("/*", false),
        peg$c167 = "*/",
        peg$c168 = peg$literalExpectation("*/", false),
        peg$c169 = function(start, com, end) {
              return start + com.join("") + end
            },
        peg$c170 = "//",
        peg$c171 = peg$literalExpectation("//", false),
        peg$c172 = "#",
        peg$c173 = peg$literalExpectation("#", false),
        peg$c174 = /^[^\r\n]/,
        peg$c175 = peg$classExpectation(["\r", "\n"], true, false),
        peg$c176 = function(start, com) {
              return start + com.join("")
            },
        peg$c177 = peg$otherExpectation("comment"),
        peg$c178 = peg$otherExpectation("number"),
        peg$c179 = function(s) { return s; },
        peg$c180 = function(i) { return i.toString(); },
        peg$c181 = function(s) { return s.toString(); },
        peg$c182 = peg$otherExpectation("cardinal"),
        peg$c183 = /^[0-9]/,
        peg$c184 = peg$classExpectation([["0", "9"]], false, false),
        peg$c185 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c186 = peg$otherExpectation("real"),
        peg$c187 = ".",
        peg$c188 = peg$literalExpectation(".", false),
        peg$c189 = function(digits) { return parseFloat(digits.join("")); },
        peg$c190 = peg$otherExpectation("boolean"),
        peg$c191 = function(bs) {return bs;},
        peg$c192 = function(b) {return b.toString();},
        peg$c193 = "true",
        peg$c194 = peg$literalExpectation("true", true),
        peg$c195 = "false",
        peg$c196 = peg$literalExpectation("false", true),
        peg$c197 = "on",
        peg$c198 = peg$literalExpectation("on", true),
        peg$c199 = "off",
        peg$c200 = peg$literalExpectation("off", true),
        peg$c201 = "0",
        peg$c202 = peg$literalExpectation("0", false),
        peg$c203 = "1",
        peg$c204 = peg$literalExpectation("1", false),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseprogram() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsestarttoken();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 123) {
              s4 = peg$c0;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c1); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s6 = peg$parsedeclarationlist();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parse_();
                  if (s7 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 125) {
                      s8 = peg$c2;
                      peg$currPos++;
                    } else {
                      s8 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c3); }
                    }
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parse_();
                      if (s9 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c4(s1, s6);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestarttoken() {
      var s0;

      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c5) {
        s0 = input.substr(peg$currPos, 3);
        peg$currPos += 3;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }

      return s0;
    }

    function peg$parsedeclarationlist() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseoptionlist();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseentitylist();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsearclist();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c7(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseoptionlist() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseoption();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 44) {
          s5 = peg$c8;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c10(s4);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseoption();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s5 = peg$c8;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c10(s4);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        s4 = peg$parseoption();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 59) {
            s5 = peg$c11;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c10(s4);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c13(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseoption() {
      var s0, s1, s2, s3, s4, s5, s6, s7;
